--- a/app/src/main/res/navigation/login_navigation.xml
+++ b/app/src/main/res/navigation/login_navigation.xml
@@ -10,5 +10,13 @@
         android:id="@+id/loginFragment"
         android:name="com.taetae98.gachonqr.fragment.LoginFragment"
         android:label="@string/login"
-        tools:layout="@layout/fragment_login"/>
+        tools:layout="@layout/fragment_login">
+        <action
+            android:id="@+id/action_loginFragment_to_mainActivity"
+            app:destination="@id/mainActivity" />
+    </fragment>
+    <activity
+        android:id="@+id/mainActivity"
+        android:name="com.taetae98.gachonqr.activity.MainActivity"
+        tools:layout="@layout/activity_main"/>
 </navigation>
