--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation xmlns:android="http://schemas.android.com/apk/res/android"
+<navigation
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_main_navigation.xml">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_main_navigation.xml"
+    app:startDestination="@id/QRFragment">
 
+    <fragment
+        android:id="@+id/QRFragment"
+        android:name="com.taetae98.gachonqr.fragment.QRFragment"
+        android:label="@string/qr"
+        tools:layout="@layout/fragment_qr"/>
 </navigation>
